[package]
name = "test-ai"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#plotters = "0.3"
textplots = "0.8"


chrono = { version = "0.4", features = ["serde"] }
csv = "1.3"
polars = "0.36"
#polars-core = "0.36"


serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"


linfa = "0.7"
linfa-preprocessing = "0.7"


ndarray = { version = "0.15", default-features = false }
ndarray-csv = "0.5"